# deepmodeling-ai-services

./: .env.example  .gitignore  README.md  pyproject.toml  zbpack.json
deepmd_ai_services/: manage.py
deepmd_ai_services/bohrium_integration/: main.py
deepmd_ai_services/deepmd_ai_services/: asgi.py  settings.py  urls.py  wsgi.py
deepmd_ai_services/deepmd_modal_batch_queue/: admin.py  apps.py  models.py
deepmd_ai_services/deepmd_modal_batch_queue/migrations/: 0001_initial.py  0002_queuejob_modal_volume_name.py
deepmd_ai_services/deepmd_workbench/: deepmd_auth_midware.py  deepmd_dpa_lammps_mcp.py  deepmd_modal_run_service.py  pyproject.toml
deepmd_ai_services/deepmd_workbench/deepmd_agent_services/: Dockerfile
deepmd_ai_services/deepmd_workbench/deepmd_agent_services/deepmd_agent/: agent.py
deepmd_ai_services/users/: admin.py  api.py  draft_supabase_jwt.py  models.py
deepmd_ai_services/users/migrations/: 0001_initial.py
