[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepmd-ai-services"
version = "0.1.0"
description = "DeepMD AI Services Backend"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "DeepModeling Team"}
]
keywords = ["deepmd", "ai", "machine-learning", "molecular-dynamics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "Django>=5.2.2,<6.0",
    "psycopg2-binary>=2.9.9",
    "python-decouple>=3.8",
    "gunicorn>=21.2.0",
    "whitenoise>=6.6.0",
    "dj-database-url>=2.1.0",
    "django-cors-headers>=4.3.0",
    "djangorestframework>=3.14.0",
    "django-unfold>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-django>=4.5.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/deepmodeling/deepmd-ai-services"
Repository = "https://github.com/deepmodeling/deepmd-ai-services"
Issues = "https://github.com/deepmodeling/deepmd-ai-services/issues"

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
skip_glob = ["*/migrations/*"]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
