[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepmd-workbench"
version = "0.1.0"
description = "DeepMD Workbench - AI services for molecular dynamics"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0",
    "uvicorn>=0.30.0",
    "google-adk>=1.1.0",
    "fastmcp>=2.10.0",
    "modal>=1.1.0",
    "sqlalchemy>=2.0.0",
    "loguru>=0.7.0",
    "python-jose[cryptography]>=3.3.0",
    "requests>=2.31.0",
    "aiofiles>=23.2.0",
    "openmeter==1.0.0b188",
    "cloudevents>=1.9.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0"
]
